# ntt-proj

./: CMakeLists.txt  cpu-baseline.cpp  dkr-run.sh  dockerfile
bench/: main.cpp
include/: ntt_cpu.h  ntt_openfhe.h  utils.h
